<resources>
    <string name="app_name">మైత్రేయ</string>
    <string name="action_year" translatable="false">Set Year</string>
    <string name="action_status" translatable="false">Location</string>
    <string name="thithi">      తిథి :        </string>
    <string name="karana">      కరణం :        </string>
    <string name="blank_space" translatable="false">\u0020     </string>
    <string name="Nakshatra">   నక్షత్రం :     </string>
    <string name="Yoga">        యోగం :        </string>
    <string name="sukla">       "శుక్ల "         </string>
    <string name="bahula">      "క్రిష్ణ "           </string>
    <string name="sur_udayam">  సూర్యోదయం :  </string>
    <string name="sur_astham">  అస్తమయం :  </string>
    <string name="varjyam">     వర్జ్యం    :</string>
    <string name="DurMuhurtham">దుర్ముహుర్త :</string>
    <string name="the">         తె.         </string>
    <string name="sayam">       సా.         </string>
    <string name="Madhya">      మ.          </string>
    <string name="rathri">      రా.         </string>
    <string name="udayam">      ఉ.          </string>
    <string name="full">        పూర్తి.      </string>
    <string name="rahukal">     రాహుకాలం:    </string>
    <string name="adhika">      అధిక\u0020  </string>
    <string name="kshaya">      (క్షయ)      </string>
    <string name="udaya_lgna">  ఉదయ లగ్నం :  </string>
    <string name="sankranthi">" సంక్రాంతి "</string>
    <string name="karthari">" కార్తె "</string>
    <string-array name="months">
        <item>జనవరి</item>
        <item>ఫిబ్రవరి</item>
        <item>మార్చ్</item>
        <item>ఏప్రియల్</item>
        <item>మే</item>
        <item>జూన్</item>
        <item>జులై</item>
        <item>ఆగస్ట్</item>
        <item>సెప్టెంబర్</item>
        <item>అక్టోబర్</item>
        <item>నవంబర్</item>
        <item>డిశంబర్</item>
    </string-array>
    <string-array name="wkdays">
        <item>సోమ</item>
        <item>మంగ</item>
        <item>బుధ</item>
        <item>గురు</item>
        <item>శుక్ర</item>
        <item>శని</item>
        <item>ఆది</item>
    </string-array>
    <string-array name="lunar_months">
        <item>చైత్ర</item>
        <item>వైశాఖ</item>
        <item>జ్యేష్ఠ</item>
        <item>ఆషాఢ</item>
        <item>శ్రావణ</item>
        <item>భాద్రపద</item>
        <item>ఆశ్వయుజ</item>
        <item>కార్తీక</item>
        <item>మార్ఘశీర్ష</item>
        <item>పుష్య</item>
        <item>మాఘ</item>
        <item>ఫాల్గుణ</item>
    </string-array>
    <string-array name="ruthus">
        <item>వసంత</item>
        <item>వసంత</item>
        <item>గ్రీష్మ</item>
        <item>గ్రీష్మ</item>
        <item>వర్ష</item>
        <item>వర్ష</item>
        <item>శరద్</item>
        <item>శరద్</item>
        <item>హేమంత</item>
        <item>హేమంత</item>
        <item>శశిర</item>
        <item>శశిర</item>

    </string-array>
    <string-array name="solar_months">
        <item>మేష</item>
        <item>వృషభ</item>
        <item>మిథున</item>
        <item>కర్కాటక</item>
        <item>సింహ</item>
        <item>కన్యా</item>
        <item>తులా</item>
        <item>వృశ్చిక</item>
        <item>ధనుస్సు</item>
        <item>మకర</item>
        <item>కుంభ</item>
        <item>మీన</item>
        <item>భోగీ   </item>
        <item>కనుమ </item>
    </string-array>
    <string-array name="Nakshatras">
        <item>అశ్వని. </item>
        <item>భరణి.   </item>
        <item>కృత్తిక. </item>
        <item>రోహిణి. </item>
        <item>మృగశిర.   </item>
        <item>ఆరుద్ర.  </item>
        <item>పునర్వసు. </item>
        <item>పుష్యమి.</item>
        <item>ఆశ్లేష.</item>
        <item>మఘ.</item>
        <item>పుబ్బ.</item>
        <item>ఉత్తర.</item>
        <item>హస్త.</item>
        <item>చిత్ర.</item>
        <item>స్వాతి.</item>
        <item>విశాఖ.</item>
        <item>అనురాధ.    </item>
        <item>జ్యేష్ఠ.   </item>
        <item>మూల.       </item>
        <item>పూర్వాషాఢ.   </item>
        <item>ఉత్తరాషాఢ.    </item>
        <item>శ్రవణం.    </item>
        <item>ధనిష్ఠ.    </item>
        <item>శతభిష.     </item>
        <item>పూర్వాభాద్ర.  </item>
        <item>ఉత్తరాభాద్ర.   </item>
        <item>రేవతి.     </item>
    </string-array>
    <string-array name="thithis">
        <item> ప్రధమ.   </item>
        <item> ద్వితీయ. </item>
        <item> తృతీయ.   </item>
        <item> చతుర్ధి. </item>
        <item> పంచమ.    </item>
        <item> షష్ఠి.   </item>
        <item> సప్తమి.  </item>
        <item> అష్ఠమి.  </item>
        <item> నవమి.    </item>
        <item> దశమి.    </item>
        <item> ఏకాదశి.  </item>
        <item> ద్వాదశి. </item>
        <item> త్రయోదశి. </item>
        <item> చతుర్దశి. </item>
        <item> పూర్ణిమ.  </item>
        <item> అమావశ్య. </item>
    </string-array>
    <string-array name="karanas">
        <item> బవ      </item>
        <item> బాలవ      </item>
        <item> కౌలవ     </item>
        <item> తైతుల       </item>
        <item> గరజి     </item>
        <item> వణిజ     </item>
        <item> భద్ర       </item>
        <item> శకుని        </item>
        <item> చతుష్పాద    </item>
        <item> నాగవం          </item>
        <item> కింస్తుఘ్నం      </item>

    </string-array>
    <string-array name="yogas">
        <item>విష్కుంభ.              </item>
        <item>ప్రీతి.                </item>
        <item>ఆయుష్మాన్.         </item>
        <item>సౌభాగ్య.           </item>
        <item>శోభన.                  </item>
        <item>అతిగండ.       </item>
        <item>సుకర్మ.       </item>
        <item>ధ్రితి.       </item>
        <item>శూల.          </item>
        <item>గండ.          </item>
        <item>వృధ్ధి.       </item>
        <item>ధృవ.          </item>
        <item>వ్యాఘాత.   </item>
        <item>హర్షణ.        </item>
        <item>వజ్ర.          </item>
        <item>సిధ్ధి.         </item>
        <item>వ్యాతిపాత.    </item>
        <item>వారియ.         </item>
        <item>పరిఘ.           </item>
        <item>శివ.             </item>
        <item>సిధ్ధ.          </item>
        <item>సాధ్య.         </item>
        <item>శుభ.              </item>
        <item>శుక్ల.            </item>
        <item>బ్రహ్మ.           </item>
        <item>ఇంద్ర.            </item>
        <item>వైధ్రితి.        </item>
    </string-array>
    <string-array name="hindhu_years">
        <item>ప్రభవ        </item>
        <item>విభవ          </item>
        <item>శుక్ల         </item>
        <item>ప్రమోద్యూత</item>
        <item>ప్రఙాపతి     </item>
        <item>అంగీరస        </item>
        <item>శ్రీముఖ      </item>
        <item>భావ          </item>
        <item>యువ          </item>
        <item>ధాత్రి        </item>
        <item>ఈశ్వర         </item>
        <item>బహుధాన్య      </item>
        <item>ప్రమోది        </item>
        <item>విక్రమ         </item>
        <item>వృష            </item>
        <item>చిత్రభాను      </item>
        <item>సుభాను         </item>
        <item>తారణ           </item>
        <item>పార్ధివ        </item>
        <item>వ్యయ           </item>
        <item>సార్వజిత్      </item>
        <item>సర్వధారి       </item>
        <item>విరోధి         </item>
        <item>వికృతి         </item>
        <item>ఖర           </item>
        <item>నందన         </item>
        <item>విఙయ         </item>
        <item>ఙయ           </item>
        <item>మన్మధ        </item>
        <item>దుర్ముఖి     </item>
        <item>హేవళంబి      </item>
        <item>విళంబి       </item>
        <item>వికారి       </item>
        <item>శార్వరి      </item>
        <item>ప్లవ         </item>
        <item>శుభకృత       </item>
        <item>శోభకృత      </item>
        <item>క్రోధి      </item>
        <item>విశ్వావసు   </item>
        <item>పరాభవ       </item>
        <item>ప్లవంగ      </item>
        <item>కీలక        </item>
        <item>సౌమ్య       </item>
        <item>సాధారణ      </item>
        <item>విరోధికృత   </item>
        <item>పరిధావి     </item>
        <item>ప్రమోదిచ    </item>
        <item>ఆనంద        </item>
        <item>రాక్షస       </item>
        <item>నల           </item>
        <item>పింగళ        </item>
        <item>కాళయుక్తి    </item>
        <item>సిద్ధార్ధి   </item>
        <item>రౌద్రి       </item>
        <item>దుర్మతి      </item>
        <item>దుంధుభి      </item>
        <item>రుధిరోద్గారి </item>
        <item>రక్తాక్షి    </item>
        <item>క్రోధన       </item>
        <item>అక్షయ        </item>


    </string-array>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="Alaram_header" translatable="false">Alaram</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="alaram_title" translatable="false">Set alaram on/off </string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
</resources>