<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Set Alaram">

        <SwitchPreferenceCompat
            app:key="@string/Alaram_header"
            app:title="@string/alaram_title" />



        <SwitchPreferenceCompat
            app:dependency="Alaram"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
        <com.example.mycalender.TimePreference
              app:key = " alaramkey"
              app:title = " setalaram"
            />

    </PreferenceCategory>

</PreferenceScreen>